--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,4 @@ replay_pid*
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,kotlin
+.idea/vcs.xml
