--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
 .idea/artifacts
-# .idea/compiler.xml
+.idea/compiler.xml
 # .idea/jarRepositories.xml
 # .idea/modules.xml
 # .idea/*.iml
@@ -156,3 +156,4 @@ replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,kotlin
 .idea/vcs.xml
+/.idea/
