--- a/chatserver/src/main/resources/application.yml
+++ b/chatserver/src/main/resources/application.yml
@@ -16,6 +16,13 @@ spring:
         format_sql: true
         use_sql_comments: true
 
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+
 logging.level:
   org.hibernate.SQL: debug
   # org.hibernate.type: trace
